# my-cherry-studio

./: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  WORKFLOW_EVOLUTION_ROADMAP.md  biome.jsonc  electron-builder.yml  electron.vite.config.ts  package.json
.github/workflows/: auto-i18n.yml  nightly-build.yml  pr-ci.yml  release.yml  update-app-upgrade-config.yml
docs/: DIARY_UNIFICATION_PLAN.md  IMAGE_MODULE_OPTIMIZATION_PLAN.md  VCP-ARCHITECTURE.md  VCP-EXTENSIONS-USAGE.md  VCP-INTEGRATION.md  VCP-QUICK-REFERENCE.md  config-mapping.md  presets-random.md  prompt-impacted-components.md  prompt-optimization.md  prompt-performance-report.md
docs/en/: VCP-FEATURE-COMPARISON.md
docs/zh/: AGENT-ASSISTANT-FUSION-PLAN.md  CODING-CONSTRAINTS.md  DEPRECATED-CODE-AUDIT-REPORT.md  INDEPENDENT-ARCHITECTURE.md  MEMORY-ARCHITECTURE-ANALYSIS.md  MEMORY-LOGIC.md  VCP-ARCHITECTURE-ADAPTATION.md  VCP-CODE-AUDIT-REPORT.md  VCP-FEATURE-COMPARISON.md  VCP-INTEGRATION-AUDIT.md  VCP-INTEGRATION-DIFF-FIX.md  VCP-MEMORY-ARCHITECTURE.md  VCP-MIGRATION-STRATEGY.md  VCP-NATIVE-AUDIT-TODO.md  VCP-NATIVE-DEV-AUDIT.md  VCP-NATIVE-KNOWLEDGE-SPEC.md  VCP-NATIVE-REVIEW-PROTOCOL.md  VCP-NATIVE-REWRITE-PLAN.md  VCP-NATIVE-RUNTIME-SPEC.md  VCP-NATIVE-UX-SPEC.md  (+2 more)
native-vcp/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test-modules.js
native-vcp/src/: chinese_search.rs  chunker.rs  cooccurrence.rs  database.rs  hybrid_search.rs  lib.rs  search.rs  semantic_group.rs  tagmemo.rs  tracing_bridge.rs  vector.rs  vexus.rs  waverag.rs
架构文档/: jiagou.md  优化任务清单.md  架构文档.md
(+1179 files in other folders)
